Update dependencies to fix vulnerabilities

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "babelify": "^7.3.0",
     "browserify": "13.0.0",
     "faucet": "0.0.1",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.0",
     "gulp-append-prepend": "^1.0.4",
     "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.1",
@@ -38,7 +38,7 @@
     "pump": "^1.0.3",
     "run-sequence": "^1.2.2",
     "standard": "^11.0.1",
-    "tap": "10.3.0",
+    "tap": "^12.6.1",
     "tap-parser": "~3.0.4",
     "tape": "^4.9.0",
     "tape-run": "3.0.0",
